kubernetes-sonatype-nexus/nexus-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus-server
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path:   /
    prometheus.io/port:   '8081'
spec:
  selector: 
    app: nexus-server
  type: NodePort  # Hoặc LoadBalancer nếu bạn cần
  ports:
    - name: http-8081
      port: 8081
      targetPort: 8081
      nodePort: 32000
    - name: http-8082
      port: 8082
      targetPort: 8082
      nodePort: 32002  # hosted
    - name: http-8083
      port: 8083
      targetPort: 8083
      nodePort: 32003  # proxy
